--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="renderer" content="webkit">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <link rel="icon" href="https://iili.io/2Iksu3u.jpg">
+  <!-- <link rel="icon" href="https://iili.io/2Iksu3u.jpg"> -->
 
   <!-- <link rel="icon" href="<%= BASE_URL %>new-favicon.png"> -->
-  <!-- <link rel="shortcut icon" href="/src/assets/uniqueSyslogo-new.png" type="image/x-icon"> -->
+  <link rel="icon" href="<%= BASE_URL %>new-favicon.png">
 
 
   <!-- Load polyfills to support older browsers -->
